test/types/records/split-init/inner-fn.good
inner-fn.chpl:20: In function 'main':
inner-fn.chpl:22: error: Variable 'x' is used before it is initialized
